<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="user_profile">Profile</string>
    <string name="date_text">Date: %1$s</string>
    <string name="time_text">Time: %1$s</string>
    <string name="players_text_fraction" translatable="false">%1$d/%2$d</string>

    <string name="players_number_text" translatable="false">%1$d|%2$d</string>
    <string name="sign_in" translatable="false">SIGN IN</string>
    <string name="sign_up" translatable="false">SIGN UP</string>

    <string name="email_hint">Email</string>
    <string name="nickname_hint">Nickname</string>
    <string name="pwd_hint" translatable="false">Password</string>
    <string name="pwd_conf_hint">Confirm Password</string>

    <string name="nickname">user nickname</string>
    <string name="subs">Subscriber</string>
    <string name="verified">Verified</string>
    <string name="new_tournament">New tournament</string>
    <string name="update_info">Update Info</string>
    <string name="logout">Logout</string>
    <string name="dont_have_account_question">Don\'t have an account? Click here!</string>
    <string name="have_account_question">Already have an account? Click here!</string>
    <string name="login_activity">Login Activity</string>
    <string name="empty_string">Cannot be empty</string>
    <string name="confirm_email_hint">Confirm email</string>
    <string name="must_not_be_empty">Must not be empty</string>
    <string name="email_or_password_wrong">Email or password wrong</string>
    <string name="email_must_match">Emails must match</string>
    <string name="password_must_match">Passwords must match</string>
    <string name="email_is_malformed">Email is malformed</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="weak_password_exception">At least 6 chars</string>
    <string name="dialog_players_number"># players:</string>
    <string name="dialog_tournament_search">Search</string>
    <string name="dialog_tournament_title">Tournament title</string>
    <string name="dialog_games">Choose a game</string>
    <string name="dialog_tournament_create">CREATE</string>
    <string name="select_date">SELECT DATE</string>
    <string name="select_time">SELECT TIME</string>
    <string name="create_tournament">Create tournament</string>
    <string name="select_game">select game</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="home_string">Home</string>
    <string name="user_string">User</string>
    <string name="search_string">Search</string>
    <string name="match_of_tournament_string">Match of</string>
    <string name="choose_a_game_string">Game</string>
    <string name="match_number">Match #%1</string>
    <string name="description">description</string>
    <string name="tournament_title">tournament title</string>
    <string name="players_number"><u>players#</u>:
    </string>
    <string name="select_a_game">Select a game</string>
    <string name="tournament_details">Tournament info</string>
    <string name="players_in_tournament_numbers" translatable="false">%1$d/%2$d</string>
    <string name="mail">user email</string>
    <string name="history_of_user">%1$s History</string>
    <string name="history">History</string>
    <string name="link_account_with_google">Link with Google</string>
    <string name="link_account_with_facebook">Link with Facebook</string>
    <string name="provider_already_linked">Provider already linked</string>
    <string name="players_with_number">Players: %1$d</string>
    <string name="no_tournaments_for_user">This user has never been in a tournament yet!</string>
    <string name="select_games">Select games</string>
    <string name="all_games">All games</string>

    <string name="facebook_app_id" translatable="false">660604807780881</string>
    <string name="google_server_client_id" translatable="false">
        848647809387-vr3gqt50heqeocr88g2mjg7t2kcu7p78.apps.googleusercontent.com
    </string>


    <string name="or">or</string>
    <string name="facebook_connected">You can now login with Facebook!</string>
    <string name="create_a_password">Create a password</string>
    <string name="link_accounts">Link password</string>
    <string name="email_connected">You can now login with email and password!</string>
    <string name="at_least_3_chars">Write at least 3 characters!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="google_connected">You can now login with Google!</string>
    <string name="oauth_collision_message">You already have an account with another provider. Login using it and then
        link the account!
    </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="register_now">Register now</string>
    <string name="confirm_registration">"Confirm registration"</string>
    <string name="registration_question">Are you sure you want to register to this tournament?</string>
    <string name="already_registered_user">You are already registered to this tournament</string>
    <string name="successfully_registration">Registration successfully completed</string>
    <string name="Players">Players</string>
    <string name="image_not_set">Error occurred while trying to set the profile image</string>
    <string name="image_set">Image updating successfully completed</string>

    <string-array name="spinner_content_tournament_creation">
        <item>8</item>
        <item>16</item>
        <item>32</item>
    </string-array>

</resources>
