<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.myapplication.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
            android:id="@+id/navigation_search"
            android:name="com.example.myapplication.ui.search.SearchFragment"
            android:label="@string/title_dashboard"
            tools:layout="@layout/fragment_dashboard"/>


    <fragment
            android:id="@+id/navigation_user_profile"
            android:name="com.example.myapplication.ui.userprofile.UserProfileFragment"
            android:label="@string/title_notifications"/>

</navigation>