<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.login.SigninViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hearthstone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            tools:context="com.example.myapplication.ui.MainActivity"
            android:fitsSystemWindows="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/at_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/boh"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/at_logo_black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_edit_textview"
                android:hint="@string/email_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_margin="32dp"
                android:textSize="32sp"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/at_logo"
                android:theme="@style/AppTheme.LoginEditTextTheme" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_edit_textview"
                android:layout_width="0dp"
                android:hint="@string/pwd_hint"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_margin="32dp"
                android:textSize="32sp"
                android:text="@={viewModel.password}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_edit_textview"
                android:theme="@style/AppTheme.LoginEditTextTheme" />

            <ProgressBar
                android:id="@+id/signin_progress_bar"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:indeterminate="true"
                android:progressTint="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="@+id/button_sign_in"
                app:layout_constraintTop_toTopOf="@+id/button_sign_in"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_sign_in"
                style="@style/Theme.Design.Light"
                android:layout_width="150dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_styles"
                android:text="@string/sign_in"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_edit_textview"
                tools:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="8dp"
                android:id="@+id/or_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
                app:layout_constraintStart_toStartOf="@+id/button_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

            <in.championswimmer.libsocialbuttons.FabSocial
                android:id="@+id/facebook_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or_tv"
                app:layout_constraintRight_toLeftOf="@id/google_login_button"
                app:social="facebook" />

            <in.championswimmer.libsocialbuttons.FabSocial
                android:id="@+id/google_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebook_login_button"
                app:layout_constraintTop_toTopOf="@+id/facebook_login_button"
                app:social="google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/create_account_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/dont_have_account_question"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/button_sign_in"
                app:layout_constraintRight_toRightOf="@id/button_sign_in"
                app:layout_constraintTop_toBottomOf="@+id/facebook_login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>